motyga-rs/tui/src/bottom_pane/snapshots/motyga_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
                                                
› 1. Read Only (current)  Motyga can read       
                          files                 
  2. Full Access          Motyga can edit       
                          files                 
                                                
  Press enter to confirm or esc to go back
